--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : point nine seven
+title : Point 97
 tagline: Site Tagline
 author :
   name : pointNineSeven
