full set of climacon mappings

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : Point Nine Seven
 tagline: Cutting edge technology solutions for marine &amp; coastal communities.
 author :
   name : Point Nine Seven
-  email : charles@ecotrust.org
+  email : info@pointnineseven.com
   phone: 503.467.0785
   github : username
   twitter : username
