--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Point Nine Seven
-tagline: Cutting edge technology solutions for marine &amp; coastal communities.
+tagline: Technology solutions and engagement strategies for marine &amp; coastal planning.
 author :
   name : Point Nine Seven
   email : info@pointnineseven.com
