--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : Point Nine Seven
 tagline: Technology solutions and engagement strategies for marine &amp; coastal planning.
 author :
   name : Point Nine Seven
-  email : info@pointnineseven.com
+  email : info@point97.net
   phone: 503.467.0785
   github : username
   twitter : username
